PP-405 Fix unwanted scroll bar (#107)
* PP-405: Fix unwanted scrollbar

* PP-405: Update script

--- a/src/views/CreateBook/Manager/Summary/SummaryInfo/Progress/GanttChartModal/Content/Process/Sections/style.scss
+++ b/src/views/CreateBook/Manager/Summary/SummaryInfo/Progress/GanttChartModal/Content/Process/Sections/style.scss
@@ -1,6 +1,11 @@
 .sections {
   width: 100%;
-  max-height: 288px;
+  max-height: 291px;
   padding: 8px 0;
   overflow-y: auto;
+  overflow-x: hidden;
+
+  &.long {
+    max-height: 288px;
+  }
 }
